<resources>
    <string name="app_name">Barman</string>

    <!-- Navigation header -->
    <string name="user_mail_placeholder">sample@mail.com</string>
    <string name="username">Username</string>
    <string name="user_photo_description">User\'s profile photo</string>

    <!-- Navigation menu -->
    <string name="long_drinks">Long drinks</string>
    <string name="short_drinks">Short drinks</string>
    <string name="shots">Shots</string>
    <string name="snacks">Snacks</string>

    <!-- Drawer toggle -->
    <string name="open_drawer_description">Open drawer</string>
    <string name="close_drawer_description">Close drawer</string>

    <!-- Main activity screen -->
    <string name="add_recipe_description">Add new recipe</string>

    <!-- Create recipe screen -->
    <string name="create_recipe_toolbar_title">Create new recipe!</string>
    <string name="edit_recipe_toolbar_title">Edit recipe</string>
    <string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="add_photo_description">Add photo</string>
    <string name="add_ingredient_list">Add list of ingredients</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="camera_error_toast">Problem occurred - unable to take a photo</string>
    <string name="no_camera_app_toast">No camera application is installed on the device</string>

    <!-- Create/edit recipe cancel dialog -->
    <string name="define_name_message">Name has to be defined</string>
    <string name="cancel_message">Are you sure you want to cancel and lose all changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Show recipe screen | Recipe list item -->
    <string name="ingredients">Ingredients</string>
    <string name="preparation">How to prepare</string>
    <string name="recipe_name_placeholder">Recipe name</string>
    <string name="recipe_photo_description">Photo of the recipe</string>
    <string name="edit_action">Edit</string>
    <string name="add_preparation">Add a description</string>
    <string name="add_ingredients">Add ingredients</string>
</resources>
