<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/long_drinks"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/long_drinks" />
        <item
            android:id="@+id/short_drinks"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/short_drinks" />
        <item
            android:id="@+id/shots"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/shots" />
        <item
            android:id="@+id/snacks"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/snacks" />
    </group>
</menu>