<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="12dp">

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/user_photo_description"
        android:src="@drawable/person_photo_placeholder" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/user_mail_placeholder"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>