<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/CreateRecipeTheme"
    tools:context="com.mattech.barman.CreateRecipeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <EditText
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@id/add_photo"
        android:background="@null"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/name_hint"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/toolbar"
        android:layout_margin="12dp"
        android:contentDescription="@string/add_photo_description"
        android:src="@drawable/add_photo_icon"
        android:tint="@color/colorPrimary" />

    <EditText
        android:id="@+id/recipe_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/recipe_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/description_hint" />

</RelativeLayout>
